--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:4ylZM2Qhg7kjvmUuo4om9qQPXkl8bm9JYVQxKFr5+XA=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
