--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     container_name: laravel_php
     restart: unless-stopped
     volumes:
-      - .:/var/www/html
+      - ./:/var/www/html
+      - ./storage:/var/www/html/storage
       - ./custom-php.ini:/usr/local/etc/php/conf.d/custom-php.ini
     networks:
       - laravel
